--- a/src/OC/WebAgencyBundle/Resources/config/routing.yml
+++ b/src/OC/WebAgencyBundle/Resources/config/routing.yml
@@ -1,3 +1,21 @@
 oc_web_agency_homepage:
     path:     /
     defaults: { _controller: OCWebAgencyBundle:Default:index }
+
+# app/config/routing.yml
+
+view_post_route:
+    path:    /post
+    defaults: {_controller: OCWebAgencyBundle:Post:viewPost }
+
+create_post_route:
+    path:    /post/create
+    defaults: {_controller: OCWebAgencyBundle:Post:createPost }
+
+update_post_route:
+    path:    /post/update/{id}
+    defaults: {_controller: OCWebAgencyBundle:Post:updatePost }
+
+delete_post_route:
+    path:    /post/delete/{id}
+    defaults: {_controller: OCWebAgencyBundle:Post:deletePost }
