création du HomeController

--- a/src/OC/WebAgencyBundle/Resources/config/routing.yml
+++ b/src/OC/WebAgencyBundle/Resources/config/routing.yml
@@ -1,9 +1,11 @@
-oc_web_agency_homepage:
-    path:     /
-    defaults: { _controller: OCWebAgencyBundle:Home:index }
+#oc_web_agency_homepage:
+ #   path:     /
+  #  defaults: { _controller: OCWebAgencyBundle:Home:index }
 
 # app/config/routing.yml
-
+home_page_route:
+    path:    /
+    defaults: {_controller: OCWebAgencyBundle:Home:index}
 
 view_post_route:
     path:    /post
