--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,7 +12,7 @@ framework:
     templating:
         engines: ['twig']
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: ~ #{ fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -67,3 +67,11 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb' and 'couchdb'
+    firewall_name: main
+    user_class: User\UserBundle\Entity\User
+    from_email:
+        address: "christian.yvan@gmail.com"  #"%mailer_user%"
+        sender_name: "Test fosuser"          #"%mailer_user%"
